# academic-paper-assistant

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  check_token_usage.py  install_deps.sh  pyproject.toml  requirements.txt  start.py
backend/: .coverage  .deps_installed  alembic.ini  main.py  paper_service_fixed.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_litellm.py
backend/alembic/: env.py
backend/alembic/versions/: 4cb3fad9633c_recreate_all_tables.py  9af9668e93dd_add_task_type_to_token_usage.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  papers.py
backend/app/core/: cache.py  config.py  config_loader.py  context.py  deps.py  llm.py  logger.py  middleware.py  prompts.py  security.py  settings.py
backend/app/core/agents/: base.py
backend/app/core/config/: default.yaml  development.yaml  production.yaml
backend/app/core/llm/: agents.py  base.py  config.py  controller.py  token_counter.py
backend/app/core/prompts/: __init__.py  agent_prompts.py  agents.py  base.py  citation_prompts.py  thesis.py  (+10 more)
backend/app/db/: base.py  init_db.py  session.py
backend/app/models/: __init__.py  citation.py  import_record.py  outline.py  paper.py  statistics.py  token_usage.py  topic.py  user.py
backend/app/prompts/: __init__.py
backend/app/schemas/: agent.py  auth.py  citation.py  common.py  outline.py  paper.py  search.py  statistics.py  token.py  topic.py  translation.py  user.py
backend/app/services/: academic_search_service.py  agent_service.py  cache_service.py  citation_service.py  draft_generator.py  interest_analysis_service.py  litellm_config.py  litellm_service.py  literature_search.py  llm_service.py  mcp_adapter.py  mcp_adapter_simple.py  mcp_client.py  mcp_client_factory.py  mcp_client_impl.py  mcp_client_stub.py  mcp_external_client.py  mcp_server.py  outline_generator.py  outline_service.py  paper_service.py  statistics.py  statistics_service.py  thesis_advisor.py  thesis_service.py  token_service.py  topic_service.py  translation_service.py
backend/app/utils/: json_utils.py  token_counter.py
backend/scripts/: reset_admin_password.py
backend/tests/: test_litellm_service.py
backend/tests/services/: __init__.py  test_agent_service.py  test_llm_service.py  test_token_service.py
(+139 files in other folders)
